--- a/src/main/resources/templates/emp/list.html
+++ b/src/main/resources/templates/emp/list.html
@@ -81,7 +81,7 @@
                         <td th:text="${emp.department.departmentName}"></td>
                         <td th:text="${#dates.format(emp.birth,'yyyy-MM-dd HH:mm')}"></td>
                         <td>
-                            <a class="btn btn-sm btn-primary" th:href="@{emp/}+${emp.id}">编辑</a>
+                            <a class="btn btn-sm btn-primary" th:href="@{/emp/}+${emp.id}">编辑</a>
                             <button class="btn btn-sm btn-danger" th:href="@{emp/}+${emp.id}">删除</button>
                         </td>
                     </tr>
